--- a/birthday.html
+++ b/birthday.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
   <!-- Style CSS -->
   <link rel="stylesheet" href="./styles/style.css">
-  <title>Happy Birthday!!! Jubed :)</title>
+  <title>Ucapan Hangat :)</title>
 </head>
 
 <body>
@@ -27,58 +27,59 @@
 
     <div class="one">
       <h1 class="one">
-        Hi!👋🏼 <span id="name">Jubed</span> <!-- Ganti ini jadi nama yang ultah -->
+        Hallo!👋🏼 <span id="name">Rachell</span> <!-- Ganti ini jadi nama yang ultah -->
       </h1>
-      <p class="two" id="greetingText">I really like your name btw! It's so unique and beautiful, just like you!</p>
+      <p class="two" id="greetingText">I really like your name btw! It's so beautiful, just like you!</p>
     </div>
 
     <div class="three">
-      <p>It's your birthday!! 🎂</p>
+      <p>Selamat atas sidang akhirnyaa yaa!!!</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          I hope you have a great day today, and the year ahead is full of many blessings. May all your wishes come
-          true!
+          Maaf yaa aku selalu ga hadir dihari-hari penting kamu :( ga ngasih apa-apa pula cuma support dari jauhh, 
+          merayakan pun dari jauhh. Sedih jujur kek gagal jadi pacarmu wkwkwk. Tapi tak perlu dipikirkann ini adalah moment bahagia jadi ga ada sedih sedihan 😊
+          semoga kedepannya lancar selalu yaaa, aku siap menerima cerita baru dan misuh-misuh baru di tempat kamu kerja nantiii xixixiixi😇
         </p>
         <p class="fake-btn">
-          Send your wishes ✨
+          Klik disini ✨
         </p>
       </div>
     </div>
 
     <div class="five">
       <p class="idea-1">
-        That's what I was going to do.
+        SELAMATTTT YAAAAA!!!❤️❤️
       </p>
       <p class="idea-2">
-        But then I stopped. I thought, <br /> "Why not make something special for her?"
-      </p>
+        untuk meredakan rasa bersalah aku <br /> aku ingin buat sesuatu yang special 
       <p class="idea-3">
-        I realised, I wanted to do something different. <br />
-        <strong>Something that would make you smile and feel special.</strong>
+       Ngasih sesuatu yang rada beda sama orang-orang, walaupun ga seberapa ini ehehehe <br />
+        <strong>Sesuatu yang bisa bikin kamu yaaaa minimal Senyum-senyum dan Happy</strong>
       </p>
-      <p class="idea-4">Because,</p>
+      <p class="idea-4">Selain martabak ada lagi yang spesial</p>
       <p class="idea-5">
-        You are special to me.
-        <span>😊</span>
+        Yaitu Kamuuu. AVV 
+        <span>🤪</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
+        <span>X</span>
+        <span>O</span>
+        <span>X</span>
         <span>O</span>
       </p>
     </div>
 
     <div class="six">
-      <img src="./img/ayang.png" alt="Ayanggg" class="profile-picture" id="imagePath" />
+      <img src="./img/ayang1.jpg" alt="Ayanggg" class="profile-picture" id="imagePath" />
       <img src="img/hat.svg" alt="Hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
+        <h3 class="wish-hbd">SELAMAT UNOFFICIALLY S.PD!</h3>
         <h5 class="wish-text">
-          "Happy Birthday, Ayanggg! Wishing you a day as beautiful as you are. <br /> Lots of love and hugs on your
-          special
-          day!"
+          "Selamat S.PD, Sayanggg! Aku harap kamu ga kecewa karna aku tida hadirrr hehehe <br /> Lots of love and hugs on your
+          special day!" </br> Maafin aga telat ucapanyaa 
         </h5>
       </div>
     </div>
@@ -152,11 +153,11 @@
     </div>
 
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
+      <p>Sudah yaaaa, Semoga kamu sukaaa!!!</p>
       <p id="replay">
-        Or you can click here it if you want to see it again.
+        Klik aja kalo mau diliat lagi dari awal wkwkwk
       </p>
-      <p class="last-smile">😊</p>
+      <p class="last-smile">😇</p>
     </div>
   </div>
 </body>
