--- a/birthday.html
+++ b/birthday.html
@@ -18,7 +18,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/hbd.mp3">
+    <source src="./music/selamat.mp3">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -74,12 +74,11 @@
 
     <div class="six">
       <img src="./img/ayang1.jpg" alt="Ayanggg" class="profile-picture" id="imagePath" />
-      <img src="img/hat.svg" alt="Hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">SELAMAT UNOFFICIALLY S.PD!</h3>
         <h5 class="wish-text">
-          "Selamat S.PD, Sayanggg! Aku harap kamu ga kecewa karna aku tida hadirrr hehehe <br /> Lots of love and hugs on your
-          special day!" </br> Maafin aga telat ucapanyaa 
+          "Selamat S.PD, Sayanggg! jangan senang dulu masih ada revisiann huahahhaha <br /> Lots of love and hugs on your
+          special day!" </br> Maafin aga telat ucapanyaa :)
         </h5>
       </div>
     </div>
